# doxing-emulator

./: .jiu.toml  AGENTS.md  CONTEXT.md  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: deploy.md  privacy.md
docs/agents/: domain.md
src/: client_nyquest.rs  dox_impl.rs  doxee_resolution.rs  guest.rs  inline.rs  lib.rs  main.rs  messages.rs  non_command.rs  setup.rs
src/commands/: dox.rs  help.rs  mod.rs
src/messages/: doxee-identification-failed.html  doxer-identification-failed.html  help.html  incomprehensible.html  invalid-origin.html  invoke-no-sender.html  invoker-identification-failed.html  not-user-id.html  replied-identification-failed.html  reply-no-sender.html  user-identification-failed.html  user-not-found.html
src/templates/: help.html
tests/: integration_test.rs
