[package]
name = "doxing-emulator"
version = "0.1.1"
edition = "2024"
readme = "README.md"
description = "Doxing emulator"
keywords = ["telegram", "bot", "entertainment"]
categories = ["command-line-utilities", "games", "security", "simulation"]
include = ["src", "README.md", "LICENSE"]
repository = "https://github.com/PRO-2684/doxing-emulator"
license = "MIT"
authors = ["PRO-2684"]

[dependencies]
anyhow = "1.0.98"
cached = { version = "0.55.1", default-features = false, features = ["proc_macro", "async", "async_tokio_rt_multi_thread"] }
env_logger = "0.11.8" # Logging
frankenstein = { version = "0.42.0", features = [
    "client-reqwest",
] } # Telegram API client
# lcid = "0.3.0" # Parsing language codes
log = "0.4.27" # Logging
# rand = "0.9.1" # Randomness
serde = { version = "1.0.219", features = ["derive"] } # Configuration
tokio = { version = "1.46.0", features = [
    "rt-multi-thread",
    "macros",
] } # Runtime
toml = { version = "0.8.23", optional = true } # Configuration

[[bin]]
name = "doxing-emulator"
required-features = ["cli"]

[features]
cli = ["toml"]

[profile.release]
debug = false     # Disable debug information in release builds.
strip = true      # Automatically strip symbols from the binary.
lto = true        # Enable link-time optimization.
codegen-units = 1 # Set the number of codegen units to 1.

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
