[package]
name = "doxing-emulator"
version = "0.1.5"
edition = "2024"
readme = "README.md"
description = "Doxing emulator"
keywords = ["telegram", "bot", "entertainment"]
categories = ["command-line-utilities", "games", "security", "simulation"]
include = ["src", "README.md", "LICENSE"]
repository = "https://github.com/PRO-2684/doxing-emulator"
license = "MIT"
authors = ["PRO-2684"]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
cached = { version = "0.56.0", default-features = false, features = ["proc_macro", "async", "async_tokio_rt_multi_thread"] }
compio = { version = "0.16.0", features = ["macros"] }
env_logger = "0.11.8" # Logging
frankenstein = { version = "0.45.0", features = ["trait-async"] } # Telegram API client
log = "0.4.28" # Logging
nyquest = { version = "0.3.1", features = ["multipart", "async", "json"] }
serde = { version = "1.0.228", features = ["derive"] } # Configuration
serde_json = "1.0.145"
thiserror = "2.0.17"
toml = { version = "0.9.8", optional = true } # Configuration

[[bin]]
name = "doxing-emulator"
required-features = ["cli"]

[features]
cli = ["toml"]

[profile.release]
debug = false     # Disable debug information in release builds.
strip = true      # Automatically strip symbols from the binary.
lto = true        # Enable link-time optimization.
codegen-units = 1 # Set the number of codegen units to 1.

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
